# CEIA_CV1_TP3

./: LICENSE  README.md  pyproject.toml
notebooks/: tp3_cv.ipynb  tp3_cv_experiments.ipynb
