[project]
name = "ceia-cv1-tp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "numpy",
    "matplotlib",
    "supervision",
    "ipykernel>=7.2.0",
    "pyqt6>=6.11.0",
    "scikit-image>=0.26.0",
]
